<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sensor-V1</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="welcome">Welcome,你可以打开Sliding Menu来切换菜单</string>
    <string name="help">Help</string>
    <string name="contact">Contact</string>
    <string name="data">data</string>
    <string name="tendency">tendency</string>
    <string name="sample">sampling</string>
    <string name="info">info</string>
    <string name="no_email">抱歉,您的手机尚未安装任何Email软件</string>
    <string name="start">start sampling</string>
    <string name="end">end sampling</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="person">Please select tester：</string>
    <string name="slidemenutitle">Welcome!</string>
    <string name="action">Please select action：</string>
    <string name="about_msg">&lt;b>传感器数据采集App&lt;/b> 基于智能手机内置的传感器进行相关数据采集，
         该App的主要功能包括传感器数据显示，采集，以及分析，为基于传感器数据的研究课题提供数据支持。
        &lt;br>&lt;br>
		传感器数据采集App是作者毕业设计的课题，同时在此基础上不断延伸至行为识别，室内定位等相关研究领域，
		希望大家能够支持该项目的研究!</string>
		
</resources>