<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".Sample" >
    
    <TextView  
        android:layout_gravity="center"
        android:textSize="17sp"
        android:layout_marginLeft="20dp"
        android:text="@string/person"
        android:layout_width="match_parent"   
        android:layout_height="wrap_content"/>
            
     <Spinner 
        android:id="@+id/person"   
        android:layout_gravity="center"
        android:layout_width="200sp"  
        android:layout_height="wrap_content"/>
   
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"/>
    
    <TextView  
        android:layout_gravity="center"
        android:textSize="17sp"
        android:layout_marginLeft="20dp"
        android:text="@string/action"
        android:layout_width="match_parent"   
        android:layout_height="wrap_content"/>
     
   <Spinner 
        android:id="@+id/action"   
        android:layout_gravity="center"
        android:layout_width="200sp"  
        android:layout_height="wrap_content"/>
        

     <LinearLayout
         android:orientation="horizontal"
         android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
         
          
     <Button
         android:id="@+id/start"
         android:layout_width="wrap_content"
         android:layout_height="40sp"
         android:text="@string/start"/>
          
     <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50sp"/>
              
            
     <Button
         android:id="@+id/end"
         android:layout_width="wrap_content"
         android:layout_height="40sp"
         android:text="@string/end"
         android:enabled="false"/>
          
  </LinearLayout>
     
     
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"/>
     
     
    <TextView
        android:id="@+id/show"
        android:textIsSelectable="true"
        android:textSize="17sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

</LinearLayout>